--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
     "jasmine-es6-spies": "^0.0.4",
+    "moment": "^2.29.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
